[package]
name = "mangekyou"
version = "0.1.0"
authors = ["tmt <minhtuan.tran96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib/lib.rs"
test = true
doc = true

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }
